--- a/index.html
+++ b/index.html
@@ -870,7 +870,7 @@
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z"></path>
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 11a3 3 0 11-6 0 3 3 0 016 0z"></path>
                                 </svg>
-                                <span>9442 North Capital of Texas Highway<br>Arboretum Blvd #500<br>Austin, TX 78759</span>
+                                <span>305 E Huntland Dr<br>Austin, TX 78752</span>
                             </div>
                         </div>
                     </div>
