Update Hiromi name, change CTAs to Book 1-on-1 Demo

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                     <a href="#contact" class="text-slate-300 hover:text-white transition">Contact</a>
                 </div>
                 <a href="#contact" class="btn-primary text-white px-6 py-2.5 rounded-lg font-semibold">
-                    Request Access
+                    Book 1-on-1 Demo
                 </a>
             </div>
         </div>
@@ -163,7 +163,7 @@
 
                 <div class="flex flex-wrap justify-center gap-4">
                     <a href="#contact" class="btn-primary text-white px-8 py-4 rounded-xl font-semibold text-lg">
-                        Request a Demo
+                        Book 1-on-1 Demo
                     </a>
                     <a href="#results" class="border border-slate-600 hover:border-slate-400 text-white px-8 py-4 rounded-xl font-semibold text-lg transition">
                         View Results
@@ -759,8 +759,8 @@
                     <p class="text-primary text-sm">Transformation Director</p>
                 </div>
                 <div class="card p-4 text-center">
-                    <img src="images/hiromi.png" alt="Hiromi Kajita" class="w-20 h-20 rounded-full mx-auto mb-3 object-cover">
-                    <h4 class="font-semibold">Hiromi Kajita</h4>
+                    <img src="images/hiromi.png" alt="Hiromi Whelan" class="w-20 h-20 rounded-full mx-auto mb-3 object-cover">
+                    <h4 class="font-semibold">Hiromi Whelan</h4>
                     <p class="text-primary text-sm">Digital Marketing Specialist</p>
                 </div>
                 <div class="card p-4 text-center">
@@ -882,7 +882,7 @@
                             </p>
                             <div class="pt-4">
                                 <a href="#contact" class="btn-primary inline-block text-white px-6 py-3 rounded-lg font-semibold">
-                                    Schedule Consultation
+                                    Book 1-on-1 Demo
                                 </a>
                             </div>
                         </div>
