--- a/index.html
+++ b/index.html
@@ -299,30 +299,47 @@
 
             <div class="grid md:grid-cols-4 gap-6 mb-12">
                 <div class="card p-6 text-center">
-                    <div class="text-3xl mb-3">🏢</div>
+                    <div class="w-14 h-14 mx-auto mb-4 bg-slate-700/50 rounded-xl flex items-center justify-center">
+                        <svg class="w-7 h-7 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4"></path>
+                        </svg>
+                    </div>
                     <h4 class="font-bold mb-2">PMS</h4>
                     <p class="text-slate-400 text-sm">SiteLink, storEDGE, Cubby, SSM</p>
                     <p class="text-xs text-slate-500 mt-2">Operations data</p>
                 </div>
                 <div class="card p-6 text-center">
-                    <div class="text-3xl mb-3">📢</div>
+                    <div class="w-14 h-14 mx-auto mb-4 bg-slate-700/50 rounded-xl flex items-center justify-center">
+                        <svg class="w-7 h-7 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M11 3.055A9.001 9.001 0 1020.945 13H11V3.055z"></path>
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M20.488 9H15V3.512A9.025 9.025 0 0120.488 9z"></path>
+                        </svg>
+                    </div>
                     <h4 class="font-bold mb-2">Google Ads</h4>
                     <p class="text-slate-400 text-sm">In-house or agency</p>
                     <p class="text-xs text-slate-500 mt-2">Marketing data</p>
                 </div>
                 <div class="card p-6 text-center">
-                    <div class="text-3xl mb-3">💰</div>
+                    <div class="w-14 h-14 mx-auto mb-4 bg-slate-700/50 rounded-xl flex items-center justify-center">
+                        <svg class="w-7 h-7 text-slate-400" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M12 8c-1.657 0-3 .895-3 2s1.343 2 3 2 3 .895 3 2-1.343 2-3 2m0-8c1.11 0 2.08.402 2.599 1M12 8V7m0 1v8m0 0v1m0-1c-1.11 0-2.08-.402-2.599-1M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
+                        </svg>
+                    </div>
                     <h4 class="font-bold mb-2">Pricing Tools</h4>
                     <p class="text-slate-400 text-sm">Veritec, Prorize</p>
                     <p class="text-xs text-slate-500 mt-2">Rate data</p>
                 </div>
-                <div class="card p-6 text-center gradient-border">
-                    <div class="gradient-border-inner p-5">
-                        <div class="text-3xl mb-3">🧭</div>
-                        <h4 class="font-bold mb-2 gradient-text">RevNav</h4>
-                        <p class="text-slate-300 text-sm">Smart layer on top</p>
-                        <p class="text-xs text-accent mt-2">Connects everything</p>
+                <div class="card p-6 text-center border-primary/40 bg-gradient-to-b from-primary/10 to-transparent">
+                    <div class="w-14 h-14 mx-auto mb-4 bg-gradient-to-br from-primary to-accent rounded-xl flex items-center justify-center">
+                        <svg class="w-7 h-7 text-white" viewBox="0 0 32 32" fill="none">
+                            <path d="M16 6L19 14H13L16 6Z" fill="currentColor"/>
+                            <path d="M16 26L13 18H19L16 26Z" fill="currentColor" opacity="0.6"/>
+                            <circle cx="16" cy="16" r="2" fill="currentColor"/>
+                        </svg>
                     </div>
+                    <h4 class="font-bold mb-2 gradient-text">RevNav</h4>
+                    <p class="text-slate-300 text-sm">Unified intelligence layer</p>
+                    <p class="text-xs text-accent mt-2">Connects everything</p>
                 </div>
             </div>
         </div>
