Remove Proven Results heading and facility counts

--- a/index.html
+++ b/index.html
@@ -498,11 +498,6 @@
     <!-- Results / Case Studies Section -->
     <section id="results" class="py-20 px-6">
         <div class="max-w-7xl mx-auto">
-            <div class="text-center mb-12">
-                <h2 class="text-4xl font-bold mb-4">Proven Results</h2>
-                <p class="text-slate-400 text-xl">Real outcomes from real operators</p>
-            </div>
-
             <div class="grid md:grid-cols-2 gap-8 mb-12">
                 <!-- Case Study 1 -->
                 <div class="card p-8">
@@ -511,8 +506,7 @@
                             <span class="text-primary font-bold">Top 50 Operator</span>
                         </div>
                     </div>
-                    <p class="text-slate-400 mb-6">73 facilities, 28,000 units</p>
-                    <div class="space-y-4">
+                    <div class="space-y-4 mt-6">
                         <div class="flex justify-between items-center py-3 border-b border-slate-700">
                             <span class="text-slate-400">Cost per move-in</span>
                             <span class="text-accent font-bold">$500+ &rarr; $150 (-70%)</span>
@@ -539,8 +533,7 @@
                             <span class="text-blue-400 font-bold">Top 100 Operator</span>
                         </div>
                     </div>
-                    <p class="text-slate-400 mb-6">62 facilities, 22,000 units</p>
-                    <div class="space-y-4">
+                    <div class="space-y-4 mt-6">
                         <div class="flex justify-between items-center py-3 border-b border-slate-700">
                             <span class="text-slate-400">Wasted ad spend eliminated</span>
                             <span class="text-accent font-bold">$10K/month (100%)</span>
