Link Book 1-on-1 Demo buttons to Google Calendar

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <a href="#team" class="text-slate-300 hover:text-white transition">Team</a>
                     <a href="#contact" class="text-slate-300 hover:text-white transition">Contact</a>
                 </div>
-                <a href="#contact" class="btn-primary text-white px-6 py-2.5 rounded-lg font-semibold">
+                <a href="https://calendar.app.google/mVurVyUJNm69KJ4Y7" target="_blank" class="btn-primary text-white px-6 py-2.5 rounded-lg font-semibold">
                     Book 1-on-1 Demo
                 </a>
             </div>
@@ -162,7 +162,7 @@
                 </div>
 
                 <div class="flex flex-wrap justify-center gap-4">
-                    <a href="#contact" class="btn-primary text-white px-8 py-4 rounded-xl font-semibold text-lg">
+                    <a href="https://calendar.app.google/mVurVyUJNm69KJ4Y7" target="_blank" class="btn-primary text-white px-8 py-4 rounded-xl font-semibold text-lg">
                         Book 1-on-1 Demo
                     </a>
                     <a href="#results" class="border border-slate-600 hover:border-slate-400 text-white px-8 py-4 rounded-xl font-semibold text-lg transition">
@@ -891,7 +891,7 @@
                                 <a href="https://www.revenuenavigation.com" class="text-accent hover:underline">www.revenuenavigation.com</a>
                             </p>
                             <div class="pt-4">
-                                <a href="#contact" class="btn-primary inline-block text-white px-6 py-3 rounded-lg font-semibold">
+                                <a href="https://calendar.app.google/mVurVyUJNm69KJ4Y7" target="_blank" class="btn-primary inline-block text-white px-6 py-3 rounded-lg font-semibold">
                                     Book 1-on-1 Demo
                                 </a>
                             </div>
